new height for layer

--- a/src/scss/_layer.scss
+++ b/src/scss/_layer.scss
@@ -11,7 +11,11 @@
   align-items: center;
   width: 100%;
   text-align: center;
-    left: 0;
+  left: 0;
+
+    @include small {
+      height: 640px;
+    }
   }
 
   &__BoxB {
