--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -36,6 +36,9 @@ body, body * {
 .container {
   background-color: $white;
   max-width: 1440px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 
 
 
