--- a/src/scss/_detailsite.scss
+++ b/src/scss/_detailsite.scss
@@ -5,7 +5,7 @@
 
   &__icon {
     position: absolute;
-    top: 100px;
+    top: 64px;
     left: 50%;
     margin-left: -27.5px;
     width: 55px;
@@ -15,6 +15,11 @@
       width: 210px;
       height: 156px;
       margin-left: -105px;
+      top: 70px;
+    }
+
+    @include large {
+      top: 100px;
     }
 
 
