--- a/src/scss/_detailsite.scss
+++ b/src/scss/_detailsite.scss
@@ -398,37 +398,45 @@
 
 // start with slider
 
-.carousel-container {
-  width: 100%;
-  margin: auto;
-  overflow: hidden;
-}
 
-.carousel-slide {
-  display: flex;
-  width: 100%;
-  height: 500px;
-}
 
-.carousel_pic {
-  width: 100%;
-  object-fit: contain;
-}
-
-.carousel___btnContainer {
-  display: flex;
-  justify-content: space-between;
-
-}
-
-.carousel__btn {
-  width: 50px;
-  height: 50px;
-  border-radius: 60%;
-  border: none;
-  cursor: pointer;
-}
 // end of slider
+
+//// start with slider
+//
+//.carousel-container {
+//  width: 100%;
+//  margin: auto;
+//  overflow: hidden;
+//}
+//
+//.carousel-slide {
+//  display: flex;
+//  width: 100%;
+//  height: 500px;
+//}
+//
+//.carousel_pic {
+//  width: 100%;
+//  object-fit: contain;
+//}
+//
+//.carousel___btnContainer {
+//  display: flex;
+//  justify-content: space-between;
+//
+//}
+//
+//.carousel__btn {
+//  width: 50px;
+//  height: 50px;
+//  border-radius: 60%;
+//  border: none;
+//  cursor: pointer;
+//}
+// end of slider
+
+
 
 // start styling lineUpSection
 
