--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -193,7 +193,7 @@
     font-size: 17px;
     line-height: 28px;
     display: none;
-    transition: ease-in-out;
+    transition: 2s ease-in-out;
 
     &--show {
       display: inline-block;
