change color of the border bottom

--- a/src/scss/_overview-festivals.scss
+++ b/src/scss/_overview-festivals.scss
@@ -236,9 +236,33 @@
     "pic"
     "content";
 
+    &--borderBottomHipHopp {
+      border-bottom: solid $HipHoppink;
+    }
+
+    &--borderBottomElectronic {
+      border-bottom: solid $Electronicviolett;
+    }
+
+    &--borderBottomJazz {
+      border-bottom: solid $Jazzgelb;
+    }
+
+    &--borderBottomIndie {
+      border-bottom: solid $indiemint;
+    }
+
+    &--borderBottomPopRock {
+      border-bottom: solid $PopRockblau;
+
+    }
+
     @include medium {
       height: 576px;
     }
+
+
+
 
 
 
