links for breadcrumbs

--- a/src/scss/_overview-festivals.scss
+++ b/src/scss/_overview-festivals.scss
@@ -25,11 +25,9 @@
     align-items: center;
     position: absolute;
 
-
-
-
-
   }
+
+
 
   &__homeLink {
     grid-area: A;
@@ -638,5 +636,9 @@
   }
 
 
+}
+
+a {
+  text-decoration: none;
 }
 
