--- a/src/scss/_overview-festivals.scss
+++ b/src/scss/_overview-festivals.scss
@@ -418,10 +418,25 @@
     }
   }
 
-  &__noticeStar {
+  &__noticeStarBlack {
     margin-right: 6px;
     height: 20px;
     width: 20px;
+    display: none;
+
+    &--show {
+      display: inline-block;
+    }
+  }
+
+  &__noticeStarWhite {
+    margin-right: 6px;
+    height: 20px;
+    width: 20px;
+
+    &--hidde {
+      display: none;
+    }
   }
 
   &__btn {
