--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -484,6 +484,10 @@
     background-repeat: no-repeat;
     background-size: cover;
     cursor: pointer;
+
+    &--hide {
+      display: none;
+    }
   }
 
   &__stop {
@@ -494,6 +498,10 @@
     background-size: cover;
     cursor: pointer;
     display: none;
+
+    &--show {
+      display: inline-block;
+    }
   }
 }
 
