--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -494,6 +494,8 @@
     height: 40px;
     background-repeat: no-repeat;
     background-size: cover;
+    border: none;
+    background-color: transparent;
 
 
     &--hide {
@@ -508,6 +510,8 @@
     background-repeat: no-repeat;
     background-size: cover;
     display: none;
+    border: none;
+    background-color: transparent;
 
     &--show {
       display: inline-block;
