toggle for magazineSection

--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -219,6 +219,18 @@
       display: none;
     }
 
+    &--close {
+      display: none;
+    }
+
+    &--closeOpen {
+      display: inline-block;
+    }
+
+    &--readHide {
+      display: none;
+    }
+
   }
 
   &__box {
