--- a/src/scss/_detailsite.scss
+++ b/src/scss/_detailsite.scss
@@ -486,6 +486,20 @@
     width: 100%;
   }
 
+  &__btn {
+    background-color: green;
+  }
+
+  &__btn::after {
+    display: inline-block;
+    position: absolute;
+    content: '';
+    width: 50px;
+    height: 50px;
+    background-color: hotpink;
+
+  }
+
   &__btn--1 {
     width: 100%;
 
