--- a/src/scss/_detailsite.scss
+++ b/src/scss/_detailsite.scss
@@ -487,17 +487,25 @@
   }
 
   &__btn {
-    background-color: green;
+    background-color: transparent;
+    position: relative;
   }
 
   &__btn::after {
-    display: inline-block;
     position: absolute;
+    top: 46px;
+    right: 40px;
     content: '';
     width: 50px;
     height: 50px;
-    background-color: hotpink;
+    border-left: solid 30px transparent;
+    border-right: solid 30px transparent;
+    border-top: solid black 30px;
+    display: none;
+  }
 
+  &__btn:hover::after {
+    display: block;
   }
 
   &__btn--1 {
