--- a/src/scss/_detailsite.scss
+++ b/src/scss/_detailsite.scss
@@ -511,13 +511,18 @@
     border-top: solid black 30px;
     display: none;
 
+
+
+    //@include medium {
+    //  right: 40px;
+    //}
+
   }
   &__btn:hover::after {
     display: block;
   }
 
   &__btn--1 {
-    width: 100%;
 
 
     @include medium {
@@ -545,13 +550,16 @@
   &__btnContainer {
     margin-bottom: 89px;
     display: flex;
-    justify-content: space-around;
+    flex-direction: column;
+
+
   }
 
   &__dayContainer {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-bottom: 45px;
   }
 
   // start styling schedule
