--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -253,6 +253,10 @@
     border-bottom: none;
     border-right: none;
 
+    a:visited {
+      color: #C2C2C2;
+    }
+
     @include medium {
       width: 60%;
     }
@@ -265,7 +269,7 @@
       margin-left: 12px;
       display: none;
 
-      .headerSection__IconTicketText:hover {
+      .headerSection__IconTicket:hover {
         background-color: #C2C2C2;
         color: $black100;
       }
