--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -606,15 +606,34 @@
   }
 
   &__heart {
-    background-image: url("../images/icons/detail_like_filled.svg");
-    height: 20px;
-    width: 20px;
+    cursor: pointer;
+    height: 23px;
+    width: 25px;
     background-repeat: no-repeat;
     background-size: cover;
+    animation: hearttrack 1000ms infinite;
+
+    @keyframes hearttrack {
+      0% {
+        transform: scale(1);
+        opacity: .25;
+
+      }
+      100% {
+        transform: scale(1.2);
+        opacity: 1;
+      }
+    }
+
+    //
+    //& .detail_like_filled {
+    //  fill: grey;
+    //
+    //}
   }
 
   &__qty {
-    margin-left: 7px;
+    margin-left: 25px;
     position: relative;
     top: 5px;
   }
