--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -633,9 +633,11 @@
   }
 
   &__qty {
-    margin-left: 25px;
+    margin-left: 56px;
     position: relative;
     top: 5px;
+    font-weight: bolder;
+    font-size: 20px;
   }
 
   &__btn {
