--- a/src/scss/_overview-festivals.scss
+++ b/src/scss/_overview-festivals.scss
@@ -14,7 +14,7 @@
   // start with the breadCrumbContainer
   &__breadCrumbContainer {
     max-width: 134px;
-    top: -15%;
+    //top: -15%;
     left: 120px;
     width: 100%;
     height: 40px;
@@ -29,14 +29,17 @@
 
   &__festivaldrope {
     list-style-type: none;
+    display: none;
+
+
+    &--show {
+      display: grid;
+    }
   }
 
   &__dropitem {
     display: grid;
 
-    &--hide {
-      display: none;
-    }
   }
 
 
@@ -74,15 +77,15 @@
   }
 
   &__dropdownContainer {
-    width: 18px;
-    height: 18px;
+    width: 80px;
+    height: 40px;
     border: solid 1px #C2C2C2;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 80%;
+    justify-content: space-around;
+    //align-items: center;
+    //border-radius: 80%;
     grid-area: D;
     cursor: pointer;
 
@@ -93,9 +96,12 @@
   }
 
 
-  &__dropdown {
-    width: 10px;
-    height: 10px;
+  &__dropdownarrow {
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 20px;
+    height: 20px;
+    background-image: url("../images/icons/steuerung_dropdown.svg");
   }
 
   &__ticket {
