--- a/src/scss/_overview-festivals.scss
+++ b/src/scss/_overview-festivals.scss
@@ -14,8 +14,8 @@
   // start with the breadCrumbContainer
   &__breadCrumbContainer {
     max-width: 134px;
-    //top: -15%;
-    left: 120px;
+    top: -20%;
+    left: 42%;
     width: 100%;
     height: 40px;
     display: grid;
