--- a/src/scss/_detailsite.scss
+++ b/src/scss/_detailsite.scss
@@ -186,7 +186,7 @@
     height: 40px;
     display: grid;
     grid-template-columns: auto;
-    grid-template-areas: "A B C D E F G ";
+    grid-template-areas: "A B D E F";
     grid-gap: 5px;
     align-items: center;
     padding-left: 16px;
